--- a/less/_font.less
+++ b/less/_font.less
@@ -13,7 +13,7 @@ h2, .large          { @font:4em;   font-size:@font; line-height: @line/@font*3; 
 h3, .bigger         { @font:3em;   font-size:@font; line-height: @line/@font*2;   small { font-size:0.6em; line-height:normal;}}
 h4, .big            { @font:2em;   font-size:@font; line-height: @line/@font*1.5; small { font-size:0.6em; line-height:normal;}}
 h5, .strong, strong { @font:1.2em; font-size:@font; line-height: @line/@font/4;   small { font-size:0.6em; line-height:normal;}}
-h6, .small, p       { @font:1em;   font-size:@font; line-height: @line/@font;     small { font-size:0.6em; line-height:normal;}}
+h6, .small, p       { @font:1em;   font-size:@font; line-height: @line/@font;     small { font-size:0.6em; line-height:normal;} color:#444;}
 .tiny               { @font:0.9em; font-size:@font; padding:@line/(@font*5) 0;    small { font-size:0.6em; line-height:normal;}}
 
 p {word-wrap:break-word;}
