--- a/less/_grid.less
+++ b/less/_grid.less
@@ -53,3 +53,7 @@ fluid
 .p9 { .push(9) }
 .p10 { .push(10) }
 .p11 { .push(11) }
+.p12 { .push(12) }
+.p13 { .push(13) }
+.p14 { .push(14) }
+.p15 { .push(15) }
