--- a/less/_utility.less
+++ b/less/_utility.less
@@ -45,7 +45,7 @@ body {-webkit-tap-highlight-color: rgb(255,255,158);}
 
 
 .bgrey    {background-color: @grey                 }
-.bgrey1   {background-color: lighten(@grey, 20%)   }
+.bgrey1   {background-color: #ccc   }
 .bgrey2   {background-color: darken( @grey, 20%)   }
 
 .bblue    {background-color: @blue                 }
@@ -80,4 +80,3 @@ body {-webkit-tap-highlight-color: rgb(255,255,158);}
 .green { color:@green }
 .blue  { color:@blue }
 .white { color:@white }
-
