--- a/less/_formtable.less
+++ b/less/_formtable.less
@@ -119,7 +119,6 @@ table.grid {
 }
 
 dl {
-    padding:10px;
     dt { margin-top:10px; }
     dd { margin:5px 0 5px 20px; }
 }
@@ -133,6 +132,7 @@ dl.table {
 /* buttons
 ---------------------------------------- */
 button {
+    cursor:pointer;
     padding:9px 20px;
     background:@white;
     border:1px solid #eee;
@@ -148,34 +148,41 @@ button.small { @h:25px; height:@h; min-height:@h; max-height:@h; padding:3px 6px
 
 /* colours */
 button.blue,button.green,button.yellow,button.pink,button.orange,button.red,button.sky,button.lime,button.primary { color:white; }
+
 button.blue { @color:@blue;
     background-color:@color;
     border:1px solid darken(@color,5%);
+    &:hover { background-color:lighten(@color,10%); border:1px solid lighten(@color,5%); }
 }
 
 button.green { @color:@green;
     background-color:@color;
     border:1px solid darken(@color,5%);
+    &:hover { background-color:lighten(@color,10%); border:1px solid lighten(@color,5%); }
 }
 
 button.yellow { @color:@yellow;
     background-color:@color;
     border:1px solid darken(@color,5%);
+    &:hover { background-color:lighten(@color,10%); border:1px solid lighten(@color,5%); }
 }
 
 button.pink { @color:@pink;
     background-color:@color;
     border:1px solid darken(@color,5%);
+    &:hover { background-color:lighten(@color,10%); border:1px solid lighten(@color,5%); }
 }
 
 button.orange { @color:@orange;
-    background-color:lighten(@color,15%);
     border:1px solid darken(@color,5%);
+    background-color:lighten(@color,15%);
+    &:hover { background-color:lighten(@color,10%); border:1px solid lighten(@color,5%); }
 }
 
 button.red { @color:@red;
-    background-color:lighten(@color,15%);
     border:1px solid @color;
+    background-color:lighten(@color,15%);
+    &:hover { background-color:lighten(@color,20%); border:1px solid lighten(@color,5%); }
 }
 
 /* gradient */
