--- a/less/_mixin.less
+++ b/less/_mixin.less
@@ -3,7 +3,7 @@
  *              > .multi-radius     ( topleft, topright, bottom right, bottom left                                        );
  *
  * #shadow      > .box-shadow       ( horz:0px, vert:1px, blur:2px, color:#ccc                                            );
- *              > .inset-box-shadow ( horz:0px, vert:1px, blur:2px, color: #ccc                                           );
+ *              > .inset-box-shadow ( horz:0px, vert:1px, blur:2px,offset:0, color:#ccc                                   );
  *              > .test-shadow      ( color:#ccc, @arg: 0px 0px 20px                                                      );
  *
  * #gradient    > .v                ( colorstart:#efefef, colorend:595959                                                 );
