--- a/css/style.css
+++ b/css/style.css
@@ -161,6 +161,7 @@ hr {
 input, select {
   vertical-align: middle;
 }
+/* Grays *//* Accent Colors */
 /* the true leading = line height - font size */
 /* body font size in percentages */
 /* line height in ems *//* convert to em */
@@ -597,8 +598,8 @@ textarea {
   display: inline;
   border: 1px solid #ccc;
   background: #f5f5f5;
-  text-shadow: 0 1px 0 white 0px 0px 20px;
   height: 28px;
+  text-shadow: 0 1px 0 white 0px 0px 20px;
 }
 .input-prepend .add-on input[type=checkbox],
 .input-append .add-on input[type=checkbox],
@@ -920,37 +921,6 @@ button.red:hover {
   background-color: #dc4e44;
   border: 1px solid #b32b21;
 }
-/* gradient */
-button.sky {
-  background: #34d8ec;
-  background-image: -moz-linear-gradient(top, #36e0f5, #30c8da 95%, #32cfe2);
-  background-image: -webkit-gradient(linear, left top, left bottom, from(#36e0f5), color-stop(0.95, #30c8da), to(#32cfe2));
-  background-image: -webkit-linear-gradient(top, from(#36e0f5), color-stop(0.95, #30c8da), to(#32cfe2));
-  background-image: -o-linear-gradient(top, #36e0f5 0%, #30c8da 95%, #32cfe2 100%);
-  filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr=#36e0f5, endColorstr=#32cfe2)";
-  -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr=#36e0f5, endColorstr=#32cfe2)";
-  background-image: linear-gradient(top, #36e0f5 0%, #30c8da 95%, #32cfe2 100%);
-  border: 1px solid #4ee4f6;
-  -webkit-box-shadow: 0px 0px 14px #36e0f5;
-  -moz-box-shadow: 0px 0px 14px #36e0f5;
-  box-shadow: 0px 0px 14px #36e0f5;
-  text-shadow: none;
-}
-button.lime {
-  background: #83ee20;
-  background-image: -moz-linear-gradient(top, #86f521, #79dc1e 95%, #7fe71f);
-  background-image: -webkit-gradient(linear, left top, left bottom, from(#86f521), color-stop(0.95, #79dc1e), to(#7fe71f));
-  background-image: -webkit-linear-gradient(top, from(#86f521), color-stop(0.95, #79dc1e), to(#7fe71f));
-  background-image: -o-linear-gradient(top, #86f521 0%, #79dc1e 95%, #7fe71f 100%);
-  filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr=#86f521, endColorstr=#7fe71f)";
-  -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr=#86f521, endColorstr=#7fe71f)";
-  background-image: linear-gradient(top, #86f521 0%, #79dc1e 95%, #7fe71f 100%);
-  border: 1px solid #93f639;
-  -webkit-box-shadow: 0px 0px 14px #86f521;
-  -moz-box-shadow: 0px 0px 14px #86f521;
-  box-shadow: 0px 0px 14px #86f521;
-  text-shadow: none;
-}
 button.primary {
   background: #0280d4;
   background-image: -moz-linear-gradient(top, #049cdb, #0064cd);
@@ -964,7 +934,7 @@ button.primary {
   border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
 }
 button.primary:hover {
-  color: #049cdb;
+  color: #ccc;
 }
 /* ------------ pagination ------------ */
 .pagination a {
@@ -1389,7 +1359,7 @@ body {
  *              > .multi-radius     ( topleft, topright, bottom right, bottom left                                        );
  *
  * #shadow      > .box-shadow       ( horz:0px, vert:1px, blur:2px, color:#ccc                                            );
- *              > .inset-box-shadow ( horz:0px, vert:1px, blur:2px, color: #ccc                                           );
+ *              > .inset-box-shadow ( horz:0px, vert:1px, blur:2px,offset:0, color:#ccc                                   );
  *              > .test-shadow      ( color:#ccc, @arg: 0px 0px 20px                                                      );
  *
  * #gradient    > .v                ( colorstart:#efefef, colorend:595959                                                 );
@@ -1642,7 +1612,254 @@ fluid
 .p15 {
   margin-left: 128.24999999999997%;
 }
-/* Grays *//* Accent Colors */
+/* plugin-button-bright */
+button.sky {
+  background: #34d8ec;
+  background-image: -moz-linear-gradient(top, #36e0f5, #30c8da 95%, #32cfe2);
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#36e0f5), color-stop(0.95, #30c8da), to(#32cfe2));
+  background-image: -webkit-linear-gradient(top, from(#36e0f5), color-stop(0.95, #30c8da), to(#32cfe2));
+  background-image: -o-linear-gradient(top, #36e0f5 0%, #30c8da 95%, #32cfe2 100%);
+  filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr=#36e0f5, endColorstr=#32cfe2)";
+  -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr=#36e0f5, endColorstr=#32cfe2)";
+  background-image: linear-gradient(top, #36e0f5 0%, #30c8da 95%, #32cfe2 100%);
+  border: 1px solid #4ee4f6;
+  -webkit-box-shadow: 0px 0px 20px #36e0f5;
+  -moz-box-shadow: 0px 0px 20px #36e0f5;
+  box-shadow: 0px 0px 20px #36e0f5;
+  text-shadow: none;
+}
+button.lime {
+  background: #83ee20;
+  background-image: -moz-linear-gradient(top, #86f521, #79dc1e 95%, #7fe71f);
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#86f521), color-stop(0.95, #79dc1e), to(#7fe71f));
+  background-image: -webkit-linear-gradient(top, from(#86f521), color-stop(0.95, #79dc1e), to(#7fe71f));
+  background-image: -o-linear-gradient(top, #86f521 0%, #79dc1e 95%, #7fe71f 100%);
+  filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr=#86f521, endColorstr=#7fe71f)";
+  -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr=#86f521, endColorstr=#7fe71f)";
+  background-image: linear-gradient(top, #86f521 0%, #79dc1e 95%, #7fe71f 100%);
+  border: 1px solid #93f639;
+  -webkit-box-shadow: 0px 0px 20px #86f521;
+  -moz-box-shadow: 0px 0px 20px #86f521;
+  box-shadow: 0px 0px 20px #86f521;
+  text-shadow: none;
+}
+button.hex {
+  min-width: 135px;
+  color: #333;
+  margin: 0.2em;
+  padding: 0 1.5em;
+  text-decoration: none;
+  display: inline-block;
+  background-color: #ccc;
+  border: 1px solid #ccc;
+  font: 1em/2em Arial, Helvetica;
+  text-shadow: #cccccc 0px 0px 20px;
+  -webkit-background-clip: padding-box;
+  -webkit-border-radius: 0.3em;
+  -moz-background-clip: padding-box;
+  -moz-border-radius: 0.3em;
+  border-radius: 0.3em;
+  background-clip: padding-box;
+  background: #f3f3f3;
+  background-image: -moz-linear-gradient(top, #ffffff, #ffffff 25%, #e6e6e6);
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#ffffff), color-stop(0.25%, #ffffff), to(#e6e6e6));
+  background-image: -webkit-linear-gradient(top, from(#ffffff), color-stop(0.25%, #ffffff), to(#e6e6e6));
+  background-image: -o-linear-gradient(top, #ffffff 0%, #ffffff 25%, #e6e6e6 100%);
+  filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr=#ffffff, endColorstr=#e6e6e6)";
+  -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr=#ffffff, endColorstr=#e6e6e6)";
+  background-image: linear-gradient(top, #ffffff 0%, #ffffff 25%, #e6e6e6 100%);
+  -webkit-box-shadow: inset 0 0 1px 1px rgba(255, 255, 255, 0.8);
+  -moz-box-shadow: inset 0 0 1px 1px rgba(255, 255, 255, 0.8);
+  box-shadow: inset inner 0 0 1px 1px rgba(255, 255, 255, 0.8);
+}
+/* Buttons and inputs */
+button.hex, input.hex {
+  cursor: pointer;
+  overflow: visible;
+  /* removes extra side spacing in IE */
+
+}
+/* The disabled styles */
+button.hex[disabled],
+button.hex[disabled]:hover,
+.hex.disabled,
+.hex.disabled:hover {
+  background: #eee;
+  color: #aaa;
+  border-color: #aaa;
+  cursor: default;
+  text-shadow: none;
+  position: static;
+  -moz-box-shadow: none;
+  -webkit-box-shadow: none;
+  box-shadow: none;
+}
+button.hex:hover {
+  background-color: #ddd;
+  background: #ececec;
+  background-image: -moz-linear-gradient(top, #fafafa, #dddddd);
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#fafafa), to(#dddddd));
+  background-image: -webkit-linear-gradient(top, #fafafa, #dddddd);
+  background-image: -o-linear-gradient(top, #fafafa, #dddddd);
+  background-image: linear-gradient(top, #fafafa, #dddddd);
+  filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr=#fafafa, endColorstr=#dddddd)";
+  -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr=#fafafa, endColorstr=#dddddd)";
+  background-image: -ms-linear-gradient(top, #dddddd, #dddddd);
+  -webkit-box-shadow: inset 0px 1px 2px 0 #cccccc;
+  -moz-box-shadow: inset 0px 1px 2px 0 #cccccc;
+  box-shadow: inset inner 0px 1px 2px 0 #cccccc;
+}
+button.hex:before {
+  width: 1em;
+  min-width: 1em;
+  float: left;
+  padding: 0 .2em;
+  font-size: 1.5em;
+  text-align: center;
+  margin: 0 1em 0 -1em;
+  pointer-events: none;
+  background: #ccc;
+  background: rgba(0, 0, 0, 0.1);
+  -webkit-box-shadow: 1px 0 0 rgba(0, 0, 0, 0.2);
+  -moz-box-shadow: 1px 0 0 rgba(0, 0, 0, 0.2);
+  box-shadow: 1px 0 0 rgba(0, 0, 0, 0.2);
+}
+button.hex::-moz-focus-inner {
+  border: 0;
+  padding: 0;
+}
+/* removes extra inner spacing in Firefox */
+input::-moz-focus-inner {
+  padding: .4em;
+}
+/* If line-height can't be modified, then fix Firefox spacing with padding */
+/* Hexadecimal entities for the icons */
+.hex.add:before {
+  content: "\271A";
+}
+.hex.edit:before {
+  content: "\270E";
+}
+.hex.delete:before {
+  content: "\2718";
+}
+.hex.save:before {
+  content: "\2714";
+}
+.hex.email:before {
+  content: "\2709";
+}
+.hex.like:before {
+  content: "\2764";
+}
+.hex.next:before {
+  content: "\279C";
+}
+.hex.star:before {
+  content: "\2605";
+}
+.hex.spark:before {
+  content: "\2737";
+}
+.hex.play:before {
+  content: "\25B6";
+}
+.hex.kill:before {
+  content: "\2620";
+}
+.hex.moon:before {
+  content: "\263D";
+}
+.hex.smile:before {
+  content: "\263A";
+}
+.hex.cut:before {
+  content: "\2704";
+}
+.hex.flower:before {
+  content: "\2740";
+}
+.hex.win:before {
+  content: "\270C";
+}
+.hex.plane:before {
+  content: "\2708";
+}
+.hex.phone:before {
+  content: "\2706";
+}
+.hex.dice:before {
+  content: "\2684";
+}
+.hex.anchor:before {
+  content: "\2693";
+}
+.hex.sword:before {
+  content: "\2693";
+}
+.hex.work:before {
+  content: "\2692";
+}
+.hex.flag:before {
+  content: "\2691";
+}
+.hex.gear:before {
+  content: "\2699";
+}
+.hex.coffee:before {
+  content: "\2615";
+}
+.hex.check:before {
+  content: "\2611";
+}
+.hex.warn:before {
+  content: "\26A0";
+}
+.hex.music:before {
+  content: "\266B";
+}
+.hex.recycle:before {
+  content: "\267B";
+}
+.hex.harzard:before {
+  content: "\2623";
+}
+.hex.cloud:before {
+  content: "\2601";
+}
+.hex.rainy:before {
+  content: "\2602";
+}
+.hex.one:before {
+  content: "\2460";
+}
+.hex.two:before {
+  content: "\2461";
+}
+.hex.three:before {
+  content: "\2462";
+}
+.hex.four:before {
+  content: "\2463";
+}
+.hex.five:before {
+  content: "\2464";
+}
+.hex.six:before {
+  content: "\2465";
+}
+.hex.seven:before {
+  content: "\2466";
+}
+.hex.eight:before {
+  content: "\2467";
+}
+.hex.nine:before {
+  content: "\2468";
+}
+.hex.ten:before {
+  content: "\2469";
+}
 html {
   /* flow-x, flow-y */
 
