--- a/less/style.less
+++ b/less/style.less
@@ -1,4 +1,5 @@
 @import "_reset";
+@import "_var";
 @import "_font";
 @import "_layout";
 @import "_formtable";
@@ -7,7 +8,10 @@
 @import "_mixin";
 @import "_modules";
 @import "_grid";
-@import "_var";
+
+//plugins
+@import "_plugin_button_bright";
+@import "_plugin_button_hex";
 
 //grids variables
 @grids: 12; //# of grids, up to 16
