--- a/less/style.less
+++ b/less/style.less
@@ -10,7 +10,7 @@
 @import "_grid";
 
 //plugins
-@import "_plugin_button_bright";
+@import "_plugin_button_pulse";
 @import "_plugin_button_hex";
 
 //grids variables
