[add] pill effect to hex buttons

--- a/less/_plugin_button_hex.less
+++ b/less/_plugin_button_hex.less
@@ -83,6 +83,11 @@ input::-moz-focus-inner { padding: .4em; } /* If line-height can't be modified, 
     }
 }
 
+.hex.pill {
+    #border > .border-radius( 30px );
+    border-color:#888;
+}
+
 
 /* Hexadecimal entities for the icons */
 .hex.add:before     { content: "\271A"; }
