--- a/css/style.css
+++ b/css/style.css
@@ -1872,6 +1872,15 @@ input::-moz-focus-inner {
 /* ---------------------
  * hex color mixing
  * -------------------*/
+.hex.pill {
+  -webkit-background-clip: padding-box;
+  -webkit-border-radius: 30px;
+  -moz-background-clip: padding-box;
+  -moz-border-radius: 30px;
+  border-radius: 30px;
+  background-clip: padding-box;
+  border-color: #888;
+}
 /* Hexadecimal entities for the icons */
 .hex.add:before {
   content: "\271A";
