--- a/less/_mixin.less
+++ b/less/_mixin.less
@@ -63,7 +63,7 @@
         -moz-box-shadow: inset @horizontal @vertical @blur @offset @color;
         box-shadow: inset inner @horizontal @vertical @blur @offset @color;
     }
-    .text-shadow (@color: #ccc, @arg:0px 0px 20px) {
+    .text-shadow (@arg:0px 0px 20px, @color: #ccc) {
         text-shadow: @color @arg;
     }
 }
