--- a/css/style.css
+++ b/css/style.css
@@ -1628,6 +1628,11 @@ button.lime {
   box-shadow: 0px 0px 20px #86f521;
   text-shadow: none;
 }
+/* - mixing.less */
+/* 
+ * Sexy button 
+ *
+ * */
 button.sexy {
   height: 50px;
   color: white;
@@ -1642,9 +1647,9 @@ button.sexy {
   border-radius: 4px;
   background-clip: padding-box;
   border: 1px solid rgba(0, 0, 0, 0.4);
-  -webkit-box-shadow: 0 0px 2px #3c75b7;
-  -moz-box-shadow: 0 0px 2px #3c75b7;
-  box-shadow: 0 0px 2px #3c75b7;
+  -webkit-box-shadow: 0 0px 5px rgba(0, 0, 0, 0.4);
+  -moz-box-shadow: 0 0px 5px rgba(0, 0, 0, 0.4);
+  box-shadow: 0 0px 5px rgba(0, 0, 0, 0.4);
   text-shadow: rgba(0, 0, 0, 0.1) 0 -1px 1px;
   -webkit-box-shadow: inset 0 0px 8px 0px rgba(255, 255, 255, 0.3);
   -moz-box-shadow: inset 0 0px 8px 0px rgba(255, 255, 255, 0.3);
@@ -1668,9 +1673,9 @@ button.sexy:hover {
   filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr=#1b3553, endColorstr=#1b3553)";
   -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr=#1b3553, endColorstr=#1b3553)";
   background-image: linear-gradient(top, #1b3553 0%, #284e7a 90%, #1b3553 100%);
-  -webkit-box-shadow: inset 0px 0px 1px 1px #000000;
-  -moz-box-shadow: inset 0px 0px 1px 1px #000000;
-  box-shadow: inset inner 0px 0px 1px 1px #000000;
+  -webkit-box-shadow: inset 0px 0px 1px 0px #000000;
+  -moz-box-shadow: inset 0px 0px 1px 0px #000000;
+  box-shadow: inset inner 0px 0px 1px 0px #000000;
 }
 .sexy:after {
   float: right;
