[fix] sexy button mixing, [todo] hover effect need to be more dynamic

--- a/less/_plugin_button_sexy.less
+++ b/less/_plugin_button_sexy.less
@@ -3,10 +3,14 @@
 // plugin: 
 /* 
  * Sexy button 
+ * mixing: #sexy > .button(@co1:#558ac7);
  *
  * */
 
-button.sexy {@co1:#558ac7;@co2:darken(@co1, 8%);
+//colours
+.sexy.green {@co1:#99CD67; #sexy > .button(@co1); }
+
+button.sexy {@co1:#558ac7;
     height:50px;
     color:white;
     text-align:left;
@@ -18,13 +22,7 @@ button.sexy {@co1:#558ac7;@co2:darken(@co1, 8%);
     #shadow > .box-shadow(0,0px,5px, rgba(0,0,0,0.4));
     #shadow > .text-shadow(0 -1px 1px, rgba(0,0,0,0.1));
     #shadow > .inset-box-shadow(0,0px,8px,0px, rgba(255,255,255,0.3));
-    #gradient > .v3(@co2, @co1, 90%, @co2);
-    &:hover {
-        @co3:darken(@co2, 16%);@co4:darken(@co3, 10%);
-        border:1px solid rgba(0,0,0,0.7);
-        #gradient > .v3(@co4, @co3, 90%, @co4);
-        #shadow > .inset-box-shadow(0px,0px,1px,0px, @black);
-    }
+    #sexy > .button(@co1);
 }
 
 .sexy:after {
@@ -38,4 +36,18 @@ button.sexy {@co1:#558ac7;@co2:darken(@co1, 8%);
 }
 .sexy:hover:after{
     background-color:rgba(0,0,0,.4);
+}
+
+/* mixing */
+#sexy{
+    .button(@co1:#eee){
+        @co2:darken(@co1,8%);
+        #gradient > .v3(@co2, @co1, 90%, @co2);
+        &:hover {
+            @co3:darken(@co2, 16%);@co4:darken(@co3, 10%);
+            border:1px solid rgba(0,0,0,0.7);
+            #gradient > .v3(@co4, @co3, 90%, @co4);
+            #shadow > .inset-box-shadow(0px,0px,1px,0px, @black);
+        }
+    }
 }
