[add] plugin effect > sexyshadow

--- a/less/style.less
+++ b/less/style.less
@@ -13,6 +13,7 @@
 @import "_plugin_button_pulse";
 @import "_plugin_button_sexy";
 @import "_plugin_button_hex";
+@import "_plugin_effect_sexyshadow";
 
 //grids variables
 @grids: 12; //# of grids, up to 16
