--- a/css/style.css
+++ b/css/style.css
@@ -81,7 +81,7 @@ fieldset .inline input[type=checkbox],fieldset .inline input[type=radio]{float:n
 fieldset .inline label{margin-top:4px;}
 fieldset,#IE8#HACK{padding-top:1.4em;}
 legend,#IE8#HACK{margin-top:0;margin-bottom:0;}
-.alert{padding:0.5em;margin-bottom:1em;border:2px solid #ddd;-webkit-background-clip:padding-box;-webkit-border-radius:4px;-moz-background-clip:padding-box;-moz-border-radius:4px;border-radius:4px;background-clip:padding-box;text-shadow:#cccccc 0 1px 0 #555555;}
+.alert{padding:0.5em;margin-bottom:1em;border:2px solid #ddd;-webkit-background-clip:padding-box;-webkit-border-radius:4px;-moz-background-clip:padding-box;-moz-border-radius:4px;border-radius:4px;background-clip:padding-box;text-shadow:rgba(0, 0, 0, 0.3) 0 1px 0;}
 .alert .action{display:block;margin:5px auto 0;text-align:right;}
 .alert.error{background:#fbe3e4;color:#8a1f11;border-color:#fbc2c4;}
 .alert.error a{color:#8a1f11;}
@@ -293,6 +293,9 @@ input::-moz-focus-inner{padding:.4em;}
 .hex.eight:before{content:"\2467";}
 .hex.nine:before{content:"\2468";}
 .hex.ten:before{content:"\2469";}
+.sexyshadow{min-width:150px;background:#ddd;margin:60px auto;text-align:center;position:relative;padding:1.9em 1.5em;color:rgba(0, 0, 0, 0.8);border:none;-webkit-background-clip:padding-box;-webkit-border-radius:3px;-moz-background-clip:padding-box;-moz-border-radius:3px;border-radius:3px;background-clip:padding-box;text-shadow:#ffffff 0 1px 0;}
+.sexyshadow:before,.sexyshadow:after{z-index:-1;position:absolute;content:"";bottom:15px;left:10px;width:50%;top:75%;max-width:300px;background:rgba(0, 0, 0, 0.6);-webkit-box-shadow:0 15px 10px rgba(0, 0, 0, 0.7);-moz-box-shadow:0 15px 10px rgba(0, 0, 0, 0.7);box-shadow:0 15px 10px rgba(0, 0, 0, 0.7);-webkit-transform:rotate(-3deg);-moz-transform:rotate(-3deg);-o-transform:rotate(-3deg);transform:rotate(-3deg);}
+.sexyshadow:after{-webkit-transform:rotate(3deg);-moz-transform:rotate(3deg);-o-transform:rotate(3deg);transform:rotate(3deg);right:10px;left:auto;}
 html{overflow-x:hidden;overflow-y:auto;width:100%;height:100%;}
 body{min-height:100%;padding:0;-webkit-text-size-adjust:100%;text-rendering:optimizeLegibility;}
 #site{z-index:2;margin:0 auto;position:relative;max-width:100%;width:960px;height:100%;background-color:#ffffff;-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box;}
