--- a/css/style.css
+++ b/css/style.css
@@ -36,7 +36,7 @@ hgroup.noob h1{font-size:85%;text-transform:uppercase;letter-spacing:1px;color:#
 hgroup.noob h2{font:bold 34px "Century Schoolbook",Georgia,Times,serif;color:#333;line-height:90%;margin:.2em 0 .4em 0;letter-spacing:-2px;float:right;clear:both;}
 hgroup.noob h3{color:#76879b;font-size:10px;margin:0 5px 5px 5px;font-family:"Lucida Grande",Verdana,Helvetica,Arial,sans-serif;font-size:11px;clear:both;text-align:right;line-height:3px;}
 p.twisted{color:#424242;font-family:"Adobe Caslon Pro","Hoefler Text",Georgia,Garamond,Times,serif;letter-spacing:0.1em;text-align:center;margin:40px auto;text-transform:lowercase;line-height:145%;font-size:14pt;font-variant:small-caps;}p.twisted:first-letter{text-transform:uppercase;}
-.dropcap:first-letter{float:left;color:#903;font-size:75px;line-height:60px;padding-top:4px;padding-right:8px;padding-left:3px;font-family:Georgia;}
+.dropcap:first-letter{float:left;font-size:75px;line-height:60px;padding-top:4px;padding-right:8px;padding-left:3px;font-family:Georgia;}
 p.press{background:#474747;color:#222;padding:10px;text-shadow:0 2px 3px #555555;}
 p.presslight{color:#eee;background-color:#ddd;text-shadow:0px -1px 2px #374683;padding:10px;}
 blockquote{color:#999;border-left:2px solid #999;padding-left:1em;}
