--- a/less/_font.less
+++ b/less/_font.less
@@ -148,7 +148,7 @@ font-variant: small-caps;
 &:first-letter { text-transform: uppercase; }
 }
 
-.dropcap:first-letter  { float: left; color: #903; font-size: 75px; line-height: 60px; padding-top: 4px; padding-right: 8px; padding-left: 3px; font-family: Georgia; }
+.dropcap:first-letter  { float: left; font-size: 75px; line-height: 60px; padding-top: 4px; padding-right: 8px; padding-left: 3px; font-family: Georgia; }
 
 p.press {
     background: #474747;
