--- a/css/style.css
+++ b/css/style.css
@@ -64,7 +64,7 @@ ol li ol li:before{content:counter(olfirst) "." counter(olsecond) "." counter(ol
 .step ul{list-style-type:disc;}
 legend{font-weight:bold;padding:0 .25em;}
 input,textarea,select,button{font-family:inherit;font-size:1em;}
-input[type=text],input[type=password],textarea{color:gray;padding:4px;border:1px solid #ccc;min-width:163px;-webkit-background-clip:padding-box;-webkit-border-radius:3px;-moz-background-clip:padding-box;-moz-border-radius:3px;border-radius:3px;background-clip:padding-box;-webkit-box-shadow:inset 0 1px 3px #eeeeee 1px 2px 0 #cccccc;-moz-box-shadow:inset 0 1px 3px #eeeeee 1px 2px 0 #cccccc;box-shadow:inset inner 0 1px 3px #eeeeee 1px 2px 0 #cccccc;}
+input[type=text],input[type=password],input[type=email],textarea{color:gray;padding:4px;border:1px solid #ccc;min-width:163px;-webkit-background-clip:padding-box;-webkit-border-radius:3px;-moz-background-clip:padding-box;-moz-border-radius:3px;border-radius:3px;background-clip:padding-box;-webkit-box-shadow:inset 0 1px 3px #eeeeee 1px 2px 0 #cccccc;-moz-box-shadow:inset 0 1px 3px #eeeeee 1px 2px 0 #cccccc;box-shadow:inset inner 0 1px 3px #eeeeee 1px 2px 0 #cccccc;}
 label{padding-top:6px;display:block;color:#404040;}
 input[type=button],input[type=file],input[type=image],input[type=reset],input[type=submit],button[type=button],button[type=reset],button[type=submit]{cursor:pointer;line-height:1;}
 textarea{line-height:1.25;text-align:left;}
@@ -193,11 +193,6 @@ body{-webkit-tap-highlight-color:#ffff9e;}
 .blue{color:#08b5fb;}
 .white{color:#ffffff;}
 #gradient{}
-.sexyform form{border:1px solid #270644;width:250px;margin:50px auto;padding:20px;-webkit-background-clip:padding-box;-webkit-border-radius:20px;-moz-background-clip:padding-box;-moz-border-radius:20px;border-radius:20px;background-clip:padding-box;-webkit-box-shadow:0 -5px 60px #270644;-moz-box-shadow:0 -5px 60px #270644;box-shadow:0 -5px 60px #270644;background:-moz-linear-gradient(19% 75% 90deg, #4e0085, #963ad6);background:-webkit-gradient(linear, 0% 0%, 0% 100%, from(#963ad6), to(#4e0085));}
-.sexyform label{font-size:12px;font-family:arial,sans-serif;list-style-type:none;color:#fff;text-shadow:#000 1px 1px;margin-bottom:10px;font-weight:bold;letter-spacing:1px;text-transform:uppercase;display:block;}
-.sexyform input{-webkit-transition-property:-webkit-box-shadow,background;-webkit-transition-duration:0.25s;padding:6px;border-bottom:0px;border-left:0px;border-right:0px;border-top:1px solid #ad64e0;-moz-box-shadow:0px 0px 2px #000;-webkit-box-shadow:0px 0px 2px #000;margin-bottom:10px;background:#8a33c6;width:230px;}.sexyform input:hover{-webkit-box-shadow:0px 0px 4px #000;background:#9d39e1;}
-.sexyform input.submit{-webkit-transition-property:-webkit-box-shadow,background;-webkit-transition-duration:0.25s;width:100px;background:-webkit-gradient(linear, 0% 0%, 0% 100%, from(#963ad6), to(#781bb9));background:-moz-linear-gradient(19% 75% 90deg, #781bb9, #963ad6);color:#fff;text-transform:uppercase;text-shadow:#000 1px 1px;border-top:1px solid #ad64e0;margin-top:10px;}.sexyform input.submit:hover{-webkit-box-shadow:0px 0px 2px #000;-webkit-box-shadow:0 0 2 p #000000;-moz-box-shadow:0 0 2 p #000000;box-shadow:0 0 2 p #000000;background:-webkit-gradient(linear, 0% 0%, 0% 100%, from(#963ad6), to(#781bb9));background:-moz-linear-gradient(19% 75% 90deg, #781bb9, #963ad6);}
-.sexyform input.submit:active{background:-webkit-gradient(linear, 0% 0%, 0% 100%, from(#781bb9), to(#963ad6));background:-moz-linear-gradient(19% 75% 90deg, #963ad6, #781bb9);}
 .row,.row .row{position:relative;width:100%;margin:5px auto;clear:both;display:block;}
 .col{float:left;margin-right:2.6%;display:block;}
 .last{margin-right:0;float:right;clear:right;}
@@ -293,6 +288,15 @@ input::-moz-focus-inner{padding:.4em;}
 .hex.eight:before{content:"\2467";}
 .hex.nine:before{content:"\2468";}
 .hex.ten:before{content:"\2469";}
+fieldset.sexyform input[type=text],fieldset.sexyform input[type=password],fieldset.sexyform input[type=email],fieldset.sexyform textarea{height:45px;min-height:45px;background:#f9f9f9;display:block;margin:5px 5px 5px 0;border:1px solid rgba(0, 0, 0, 0.1);-webkit-box-shadow:inset 0 0 2px 0 rgba(0, 0, 0, 0.2);-moz-box-shadow:inset 0 0 2px 0 rgba(0, 0, 0, 0.2);box-shadow:inset inner 0 0 2px 0 rgba(0, 0, 0, 0.2);}
+fieldset.sexyform textarea{padding:8px;}
+fieldset.sexyform input[type=text],fieldset.sexyform input[type=password],fieldset.sexyform input[type=email]{padding:0 8px;}
+fieldset.sexyform input[type=submit],fieldset.sexyform input[type=reset],fieldset.sexyform input[type=file]{height:45px;min-height:45px;min-width:180px;}
+fieldset.sexyform label{letter-spacing:1px;text-transform:uppercase;}
+fieldset.sexyform input:focus{outline:none;background:#e8e8e8;}
+fieldset.sexyform input.error{color:#8A1F11;background:#FBE3E4;border:1px solid #fbc2c4;}
+fieldset.sexyform input.success{color:#264409;background:#E6EFC2;border:1px solid #c6d880;}
+fieldset.sexyform input.success:after{content:"\2714";}
 .sexyshadow{min-width:150px;background:#ddd;margin:60px auto;text-align:center;position:relative;padding:1.9em 1.5em;color:rgba(0, 0, 0, 0.8);border:none;-webkit-background-clip:padding-box;-webkit-border-radius:3px;-moz-background-clip:padding-box;-moz-border-radius:3px;border-radius:3px;background-clip:padding-box;text-shadow:#ffffff 0 1px 0;}
 .sexyshadow:before,.sexyshadow:after{z-index:-1;position:absolute;content:"";bottom:15px;left:10px;width:50%;top:75%;max-width:300px;background:rgba(0, 0, 0, 0.6);-webkit-box-shadow:0 15px 10px rgba(0, 0, 0, 0.7);-moz-box-shadow:0 15px 10px rgba(0, 0, 0, 0.7);box-shadow:0 15px 10px rgba(0, 0, 0, 0.7);-webkit-transform:rotate(-3deg);-moz-transform:rotate(-3deg);-o-transform:rotate(-3deg);transform:rotate(-3deg);}
 .sexyshadow:after{-webkit-transform:rotate(3deg);-moz-transform:rotate(3deg);-o-transform:rotate(3deg);transform:rotate(3deg);right:10px;left:auto;}
