--- a/less/_formtable.less
+++ b/less/_formtable.less
@@ -4,7 +4,7 @@ fieldset {}
 legend { font-weight: bold; padding: 0 .25em; }
 
 input, textarea, select, button { font-family: inherit; font-size: 1em; }
-input[type=text], input[type=password], textarea { 
+input[type=text], input[type=password], input[type=email], textarea { 
     color:gray;
     padding:4px;
     border:1px solid #ccc;
