--- a/less/_formtable.less
+++ b/less/_formtable.less
@@ -77,7 +77,7 @@ fieldset, #IE8#HACK { padding-top:1.4em; }
 legend, #IE8#HACK { margin-top:0; margin-bottom:0; }
 
 /* alert messages */
-.alert   { padding: 0.5em; margin-bottom: 1em; border: 2px solid #ddd; #border > .border-radius(4px); #shadow > .text-shadow(0 1px 0, rgba(0,0,0,.3)); }
+.alert   { padding: 0.5em; margin:0.5em 0; border: 2px solid #ddd; #border > .border-radius(4px); #shadow > .text-shadow(0 1px 0, rgba(0,0,0,.3)); }
 .alert .action { display:block; margin:5px auto 0; text-align:right; }
 
 .alert.error   { background: #fbe3e4; color: #8a1f11; border-color: #fbc2c4; } .alert.error a   { color: #8a1f11; }
@@ -87,6 +87,9 @@ legend, #IE8#HACK { margin-top:0; margin-bottom:0; }
 
 /* formfield error container */
 form div.error { background:#fbe3e4; color:#8a1f11; padding:0.7em; margin-bottom:1em;#border > .border-radius(4px); #shadow > .text-shadow(0 1px 0 @grey);  }
+
+/* help */
+.help { width:100%; margin:3px 0; color:#bfbfbf; display:block; font-size:0.8em; }
 
 
 /* Table
