--- a/less/_plugin_form_sexy.less
+++ b/less/_plugin_form_sexy.less
@@ -1,5 +1,5 @@
 /* ========================= //
-// =   css3 form           = //
+// =   sexy form           = //
 // ========================= */
 //Plugin
 //forms
