--- a/less/style.less
+++ b/less/style.less
@@ -14,6 +14,7 @@
 @import "_plugin_button_sexy";
 @import "_plugin_button_hex";
 @import "_plugin_form_sexy";
+@import "_plugin_form_quill"; // <link href='http://fonts.googleapis.com/css?family=Shadows+Into+Light' rel='stylesheet' type='text/css'>
 @import "_plugin_effect_sexyshadow";
 
 //grids variables
