--- a/less/_font.less
+++ b/less/_font.less
@@ -19,6 +19,8 @@ h6, .small, p       { @font:1em;   font-size:@font; line-height: @line/@font;   
 p {word-wrap:break-word;}
 i, em {font-style: italic;}
 a { text-decoration:none; }
+sup { font-size:xx-small; vertical-align:text-top; margin:-8px 6px; }
+sub { font-size:xx-small; vertical-align:text-bottom; margin:-8px 6px; }
 
 /* Block Baselines */
 h1, h2, h3, h4, h5, h6,
