--- a/less/style.less
+++ b/less/style.less
@@ -16,6 +16,7 @@
 @import "_plugin_form_sexy";
 @import "_plugin_form_quill"; // <link href='http://fonts.googleapis.com/css?family=Shadows+Into+Light' rel='stylesheet' type='text/css'>
 @import "_plugin_effect_sexyshadow";
+//@import "_plugin_utility_linkicon"; // the icon is not yet set
 
 //grids variables
 @grids: 12; //# of grids, up to 16
