--- a/less/style.less
+++ b/less/style.less
@@ -18,6 +18,9 @@
 @import "_plugin_effect_sexyshadow";
 //@import "_plugin_utility_linkicon"; // the icon is not yet set
 
+//media screens, only if required
+@import "_media";
+
 //grids variables
 @grids: 12; //# of grids, up to 16
 @gut: 2.6%; //gutter width
@@ -63,13 +66,3 @@ a {
 header {  }
 section{ margin-bottom:80px;}
 footer {  }
-
-/* ================== //
-// =  media screen  = //
-// ================== */
-
-/* --- 1280 laptop/desktop -- */ @media only screen and (min-width: 1224px) { }
-/* --- 1024 netbook --------- */ @media only screen and (min-width: 992px) and (max-device-width:1024px) { }
-/* --- 480px mobile --------- */ @media only screen and (min-width: 480px) and (max-width: 800px) { }
-/* --- iPads (landscape) ---- */ @media only screen and (orientation : landscape) and (min-device-width : 768px) and (max-device-width : 1024px) { } 
-/* --- iPads (portrait) ----- */ @media only screen and (orientation : portrait) and (min-device-width : 768px) and (max-device-width : 1024px) { } 
