[add] ie6 support for all element :hover,:focus,:active by using .htc

--- a/less/style.less
+++ b/less/style.less
@@ -36,6 +36,7 @@ html {
  */
 body {             /* height, padding  */
     #sitebase > .body(100%, 0);
+    // behavior: url("css/csshover3.htc"); // remove the less comment to use for :hover,:active,:focus to work on all element in ie6, it is related to html not css file
 }
 #site{              /* width , height , bgcolor */
     #sitebase > .site( 960px , 100%   , @white);
